--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craigslist Revamp</title>
 </head>
 <body>
-    
+    <header></header>
+    <footer></footer>
 </body>
 </html>
