added containers to code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,39 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craigslist Revamp</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" integrity="sha512-KOWhIs2d8WrPgR4lTaFgxI35LLOp5PRki/DxQvb7mlP29YZ5iJ5v8tiLWF7JLk5nDBlgPP1gHzw96cZ77oD7zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header></header>
-    <footer></footer>
+    <header>
+
+    </header>
+
+    <main>
+        <div class="login-container">
+            <div>
+                <button><a href="#"><img src="images/usr.png" width="50px" height="50px"><br>Account</a></button>
+            </div>
+        </div>
+
+        <span class="sb-logo-ph-container">
+            <p>ph</p>
+        </span>
+
+        <div class="sb-logo-container">
+            <p>Craigslist</p>
+        </div>
+        
+        <div class="sb-container">
+            <input type="text" id="cl-sb" placeholder="Search something...">
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-container">
+            <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
+            <a href="#">about</a>
+        </div>
+    </footer>
 </body>
 </html>
