deleted a span class and added a logo to sb containers

--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
             </div>
         </div>
 
-        <span class="sb-logo-ph-container">
-            <p>ph</p>
-        </span>
-
         <div class="sb-logo-container">
-            <p>Craigslist</p>
+            <p id="sb-logo-cl">Craigslist</p>
+            <p id="sb-logo-ph">ph</p>
         </div>
         
         <div class="sb-container">
