--- a/login.html
+++ b/login.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" integrity="sha512-KOWhIs2d8WrPgR4lTaFgxI35LLOp5PRki/DxQvb7mlP29YZ5iJ5v8tiLWF7JLk5nDBlgPP1gHzw96cZ77oD7zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Login Page</title>
 </head>
 <body>
-    
+    <header>
+        <div class="go-back-btn">
+            <div>
+                <button id="back-btn"><a href="#"><i class="fa-solid fa-caret-left"></i></a></button>   
+            </div>
+        </div>
+
+        <div class="h-container">
+            <div>
+
+                <p id="sb-logo-ph2">ph</p>
+                <p id="sb-logo-cl2">Craigslist</p>
+            </div>
+        </div>
+    </header>
+
+<main>
+    <div class="form-container">
+        <div class="login-form">
+            <p>Login</p>
+            <label for="lf-email" id="lf-email">Email:</label>
+            <input type="email" id="lf-email" required>
+
+            <label for="lf-pw" id="lf-pw">Password:</label>
+            <input type="password" id="lf-pw" required>
+
+            <div class="lgn-sut-btn">
+                <button type="submit">Submit</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-container">
+        <div class="createacc-form">
+
+        </div>
+    </div>
+</main>
+
+    <footer>
+        <div class="footer-container-2">
+            <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
+            <a href="#">about</a>
+        </div>
+    </footer>
 </body>
 </html>
