--- a/index.html
+++ b/index.html
@@ -16,24 +16,31 @@
     <main>
         <div class="login-container">
             <div>
-                <button><a href="#"><img src="images/usr.png" width="50px" height="50px"><br>Account</a></button>
+                <div><button><a href="login.html"><img src="images/usr.png" width="50px" height="50px"><br>Account</a></button></div>
             </div>
         </div>
 
-        <div class="sb-logo-container">
-            <p id="sb-logo-cl">Craigslist</p>
-            <p id="sb-logo-ph">ph</p>
+        <div class="sb-container">
+            <div>
+                <p id="sb-logo-cl">Craigslist</p>
+                <p id="sb-logo-ph">ph</p>
+            </div>
+
+            <div>
+                <input type="text" id="cl-sb" placeholder="free kittens">
+            </div>
+
+            <div>
+                <a href="#"><button type="submit">Search</button></a>
+            </div>
         </div>
         
-        <div class="sb-container">
-            <input type="text" id="cl-sb" placeholder="Search something...">
-        </div>
     </main>
 
     <footer>
-        <div class="footer-container">
+        <div class="footer-container-1">
             <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
-            <a href="#">about</a>
+            <a href="about.html">about</a>
         </div>
     </footer>
 </body>
