--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <header>
         <div class="go-back-btn">
             <div>
-                <button id="back-btn"><a href="#"><i class="fa-solid fa-caret-left"></i></a></button>   
+                <button id="back-btn"><a href="index.html"><i class="fa-solid fa-caret-left"></i></a></button>   
             </div>
         </div>
 
@@ -30,29 +30,44 @@
     <div class="form-container">
         <div class="login-form">
             <p>Login</p>
-            <label for="lf-email" id="lf-email">Email:</label>
-            <input type="email" id="lf-email" required>
+            <label for="email" class="lbl-email">Email</label>
+            <input type="email" id="email" required>
+            <br>
+            <br>
+            <label for="pw" class="lbl-pw">Password</label>
+            <input type="password" id="pw" required>
 
-            <label for="lf-pw" id="lf-pw">Password:</label>
-            <input type="password" id="lf-pw" required>
+            <a href="#" class="lbl-fp">forgot password?</a>
 
             <div class="lgn-sut-btn">
-                <button type="submit">Submit</button>
+                <button type="submit">Login</button>
             </div>
         </div>
     </div>
 
     <div class="form-container">
         <div class="createacc-form">
-
+            <p>Create Account</p>
+            <label for="email" class="lbl-caf-email">Email</label>
+            <input type="email" required id="email" class="cf-email">
+            <br>
+            <br>
+            <label for="cf-pw" class="lbl-caf-pw">Password</label>
+            <input type="password" id="cf-pw" required>
+            <br>
+            <br>
+            <label for="cf-cp" class="lbl-caf-cpw">Confirm Password</label>
+            <input type="password" id="cf-cpw" required>
+            <div class="lgn-sut-btn">
+                <button type="submit">Submit</button>
         </div>
     </div>
 </main>
 
     <footer>
-        <div class="footer-container-2">
+        <div class="footer-container">
             <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
-            <a href="#">about</a>
+            <a href="about.html">about</a>
         </div>
     </footer>
 </body>
