--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" integrity="sha512-KOWhIs2d8WrPgR4lTaFgxI35LLOp5PRki/DxQvb7mlP29YZ5iJ5v8tiLWF7JLk5nDBlgPP1gHzw96cZ77oD7zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    
+    <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craigslist Revamp</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.css" integrity="sha512-KOWhIs2d8WrPgR4lTaFgxI35LLOp5PRki/DxQvb7mlP29YZ5iJ5v8tiLWF7JLk5nDBlgPP1gHzw96cZ77oD7zQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header>
-
+        <div class="login-container">
+            <div>
+                <!-- <button class="pst-btn"><a href="create_listing.html"><i class="fa-solid fa-file-circle-plus"></i></a></button> -->
+                <button class="lgn-btn"><a href="login.html"><i class="fa-solid fa-user"></i></a></button>   
+            </div>
+        </div>
     </header>
 
     <main>
-        <div class="login-container">
-            <div>
-                <div><button><a href="login.html"><img src="images/usr.png" width="50px" height="50px"><br>Account</a></button></div>
-            </div>
-        </div>
-
         <div class="sb-container">
             <div>
                 <p id="sb-logo-cl">Craigslist</p>
@@ -31,14 +33,14 @@
             </div>
 
             <div>
-                <a href="#"><button type="submit">Search</button></a>
+                <a href="main.html"><button type="submit">Search</button></a>
             </div>
         </div>
         
     </main>
 
     <footer>
-        <div class="footer-container-1">
+        <div class="footer-container">
             <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
             <a href="about.html">about</a>
         </div>
