--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 </main>
 
     <footer>
-        <div class="footer-container">
+        <div class="footer-container-1">
             <p><i class="fa-regular fa-copyright"></i> Copyright, 2023</p>
             <a href="about.html">about</a>
         </div>
