changed the links to #

--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
     <div class="sb-main-sp-container">
         <div class="sb-main-sp-shape">
             <div>
-                <a href="main_product.html"><img src="images/image_2.jpg" height="200px"></a>
+                <a href="#"><img src="images/image_2.jpg" height="200px"></a>
 
                 <div>
                     <p class="sb-main-sp-pn">
@@ -89,7 +89,7 @@
 
         <div class="sb-main-sp-shape">
             <div>
-                <a href="main_product.html"><img src="images/image_2.jpg" height="200px"></a>
+                <a href="#"><img src="images/image_2.jpg" height="200px"></a>
 
                 <div>
                     <p class="sb-main-sp-pn">
@@ -107,7 +107,7 @@
 
         <div class="sb-main-sp-shape">
             <div>
-                <a href="main_product.html"><img src="images/image_2.jpg" height="200px"></a>
+                <a href="#"><img src="images/image_2.jpg" height="200px"></a>
 
                 <div>
                     <p class="sb-main-sp-pn">
@@ -125,7 +125,7 @@
 
         <div class="sb-main-sp-shape">
             <div>
-                <a href="main_product.html"><img src="images/image_2.jpg" height="200px"></a>
+                <a href="#"><img src="images/image_2.jpg" height="200px"></a>
 
                 <div>
                     <p class="sb-main-sp-pn">
@@ -143,7 +143,7 @@
 
         <div class="sb-main-sp-shape">
             <div>
-                <a href="main_product.html"><img src="images/image_2.jpg" height="200px"></a>
+                <a href="#"><img src="images/image_2.jpg" height="200px"></a>
 
                 <div>
                     <p class="sb-main-sp-pn">
