removed the login button in main

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             <div>
                 <button class="pst-btn "><a href="create_listing.html"><i class="fa-solid fa-file-circle-plus"></i></a></button>
 
-                <button class="lgn-btn-1"><a href="login.html"><i class="fa-solid fa-user"></i></a></button>
+                <!-- <button class="lgn-btn-1"><a href="login.html"><i class="fa-solid fa-user"></i></a></button> -->
             </div>
         </div>
 
