--- a/main.html
+++ b/main.html
@@ -14,11 +14,10 @@
         <div class="go-back-btn">
             <div>
                 <button id="back-btn"><a href="index.html"><i class="fa-solid fa-caret-left"></i></a></button>   
+
+                <button class="pst-btn-1"><a href="create_listing.html"><i class="fa-solid fa-file-circle-plus"></i></a></button>
             </div>
-
             <div>
-                <button class="pst-btn "><a href="create_listing.html"><i class="fa-solid fa-file-circle-plus"></i></a></button>
-
                 <!-- <button class="lgn-btn-1"><a href="login.html"><i class="fa-solid fa-user"></i></a></button> -->
             </div>
         </div>
